# DeepART

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  Manifest.toml  Project.toml  README.md  l2m-requirements.txt  notes.md  pluto_init.jl  pyproject.toml  requirements.txt  test.ipynb  torch-requirements.txt
.github/workflows/: CI.yml  Docker.yml  Documentation.yml  onefetcher.yml
cluster/: README.md  core50.sh  julia-compile.sub  julia-dist.sub
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/man/contributing/: index.html
dev/man/dev-index/: index.html
dev/man/full-index/: index.html
dev/man/guide/: index.html
dockerfiles/: neofetch.Dockerfile
docs/: Project.toml  make.jl
docs/src/: index.md
docs/src/man/: contributing.md  dev-index.md  full-index.md  guide.md
flowers/: 1.tfhub_flowers.ipynb
ircv/: 2_tfhub_single.ipynb  3.tfhub_flowers.ipynb  8_2_ddvfa_l2m_plot.jl
notebooks/: EWC.ipynb  cart.jl  deepart.ipynb  deepart.jl  dlib.ipynb  instar.ipynb  integrated_gradients.ipynb  keras_example.ipynb
notebooks/old/: EWC.ipynb  julia-test.ipynb
notebooks/old/colab/: EE5320_Project.ipynb  deep_art.ipynb  instar.ipynb
old/demo/: demo.ipynb
old/flowers/: 2.ddvfa_l2m.jl
old/ircv/: 3.tfhub_flowers.ipynb  8_1_ddvfa_l2m.jl
scripts/01_wta/: gen_scenarios.jl
scripts/0_init/: README.md  bp_deeperart.jl  bp_deepheadart.jl  bp_ewc.jl  bp_instar.jl  bp_manual_simpledeepart.jl  bp_mnist.jl  bp_multihead.jl  bp_simpledeepart.jl  bp_usps.jl  bp_wtanet.jl  deepart.jl  deeper.jl  deeperart.jl  dev_cvpr.jl  dev_gpu.jl  dev_isr_dataset.jl  ewc_dev.jl  ex_nn.jl  hebb.jl  lorenz.jl  mnist.jl  oscillating.jl  sanity.jl  skl-datasets.py  train_test.jl  unicodeboard.jl  usps-rework.py  wta.jl  wtanet.jl
scripts/1_baselines/: README.md  analyze_dist.jl  dev_gpu.jl  dist.jl  dist_fuzzyart.jl  dist_sfam.jl  fuzzyart_l2.jl  gen_scenarios.jl  sfam.jl  single_fuzzyart.jl  singles.jl
scripts/1_wta/: gen_scenarios.jl  l2metrics.bat
scripts/2_l2/: README.md  dist_metrics_par.jl  gen_scenarios.jl  l2_job.jl  l2metrics.bat  l2metrics.jl  sfam_l2.jl  stats.jl  table.jl
scripts/3_single_condensed/: README.md  analyze_complex_alt.jl  condensed_complex.jl
src/: DeepART.jl  version.jl
src/deepart/: pyproject.toml  pytest.ini
src/l2m/: README.md  pyproject.toml
src/lib/: colors.jl  constants.jl  data.jl  docstrings.jl  drwatson.jl  lib.jl  models.jl  plots.jl  pluto.jl  utils.jl
src/pluto/: PlutoUtils.jl
test/: test_sets.jl
work/configs/: block-conv-dist.yml  block-fuzzy-dist.yml  contrast-dist.yml  dense-fuzzy-dist.yml  instar-dist.yml  lenet-dist.yml  oja-dist.yml
(+131 files in other folders)
