[project]
name = "deepart"
authors = [{ name = "Sasha Petrenko", email = "petrenkos@mst.edu" }]
version = "0.1.0"
description = "Experiment driver code for catastrophic forgetting in ART algorithms." # Optional
readme = "README.md" # Optional
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["art", "catastrophic forgetting"] # Optional
maintainers = [
    { name = "Sasha Petrenko", email = "petrenkos@mst.edu" }, # Optional
]
dependencies = [ # Optional
    "numpy",
    "artlib",
    "scikit-learn",
    "tqdm",
    "pandas",
    "torch",
    "torchvision",
    "torchaudio",
    "numba",
]
classifiers = [ # Optional
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]


[project.optional-dependencies] # Optional
dev = [
    # "check-manifest",
    # "build",
    # "setuptools",
    # "twine",
    "jupyterlab",
]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
    "pandas",
    "scikit-learn",
    "flake8",
]
docs = [
    "sphinx",
    "furo",
    "sphinx-multiversion",
]

[project.urls] # Optional
"Homepage" = "https://github.com/AP6YC/DeepART"
"Bug Reports" = "https://github.com/AP6YC/DeepART/issues"
"Documentation" = "https://github.com/AP6YC/DeepART/wiki"
"Source" = "https://github.com/AP6YC/DeepART"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
# [project.scripts]  # Optional
# sample = "sample:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
# package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
# requires = ["setuptools>=42"]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
